--- a/starter/index.html
+++ b/starter/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>JavaScript Language Basics</title>
+        <script src="./b02-while-e5.js"></script>
     </head>
 
     <body>
         <h1>JS Bases - Les boucles</h1>
-        <script src="./b01-for-e1.js"></script>
     </body>
 </html>
