--- a/starter/index.html
+++ b/starter/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>JavaScript Language Basics</title>
-        <script src="./b02-while-e5.js"></script>
+        <script src="./boucles-p3-fizzBuzz.js"></script>
     </head>
 
     <body>
